--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.24.0",
