--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1304.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-navigation": "^5.0.0"
